--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,55 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TodoApp</title>
+  <title>Todo App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body class="m-1 p-1">
+
+<div class="container">
+<div class="row justify-content-center">
+<div class="col-5 align-items-center">
+
+    <h3 class="bg-primary text-white p-3">
+      [ferda] To Do List
+    </h3>
+    <div class="input-group">
+    <input type="text" class="form-control">
+    <div class="input-group-append">
+      <button class="btn btn-primary">Add</button>
+    </div>
+    </div>
+
+<table class="table table-striped table-bordered">
+
+<thead>
+  <tr>
+  <th>Description</th>
+  <th>Action</th>
+</tr>
+</thead>
+<tbody>
+  <tr>
+    <td>kahvalti</td>
+    <td>no</td>
+    </tr>
+  <tr>
+    <td>spor</td>
+    <td>no</td>
+  </tr>
+    <tr>
+    <td>fatura</td>
+    <td>no</td>
+    </tr> 
+    <tr>
+    <td>cinema</td>
+    <td>no</td>
+    </tr>
+  </tr>
+</tbody>
+</table>
+</div>
 </body>
 </html>
